--- a/frontweb/index.html
+++ b/frontweb/index.html
@@ -20,7 +20,7 @@
 
 <md-toolbar class="md-whiteframe-1dp">
 	<div class="md-toolbar-tools">
-		<!--<div class="md-title">CloudUnit Demo</div>--> <img src="images/cloudunit.png" style="width: 300px;" alt="logo CloudUnit" />
+		<img src="images/cloudunit.png" style="width: 300px;" alt="logo CloudUnit" />
 	</div>
 </md-toolbar>
 
@@ -46,6 +46,5 @@
 <script src="js/filters/setDecimal.js" type="text/javascript" ></script>
 <script src="js/controllers/main.js" type="text/javascript" ></script>
 
-<!--<script src="js/services/compagny.js" type="text/javascript" ></script>-->
 </body>
 </html>
